--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Snowy520.GitHub.io by snowy520</title>
+    <title>snowy520.github.io by snowy520</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -34,7 +34,7 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse navbar navbar-default navbar-fixed-top navbar-inverse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Link</a></li>
@@ -43,6 +43,18 @@
   </div><!-- /.container-fluid -->
 </nav>
 
+<div class="container" style="margin-top:70px;">
+  <div class="col">
+    <div class="col-md-8">
+      <div class="jumbotron">
+        <h1>Hello, world!</h1>
+        <p>...</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+      </div>
+    </div>
+    <div class="col-md-4"></div>
+  </div>
+</div>
 
   
   </body>
