--- a/index.html
+++ b/index.html
@@ -43,16 +43,27 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container" style="margin-top:70px;">
+<div class="container" style="margin-top:0px;">
   <div class="col">
-    <div class="col-md-8">
+    <div class="col-md-9">
       <div class="jumbotron">
         <h1>Hello, world!</h1>
         <p>...</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
       </div>
     </div>
-    <div class="col-md-4"></div>
+    <div class="col-md-3">
+      <div class="list-group">
+        <a href="#" class="list-group-item active">
+          Cras justo odio
+        </a>
+        <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
+        <a href="#" class="list-group-item">Morbi leo risus</a>
+        <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+        <a href="#" class="list-group-item">Vestibulum at eros</a>
+      </div>
+      
+    </div>
   </div>
 </div>
 
