--- a/html/demo1.html
+++ b/html/demo1.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>demo1</title>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
+
+    <link rel="stylesheet" type="text/css" href="../resources/css/demo1.css">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-ssss
+<h1>Demo1</h1>
+
+<div class="card-drop">
+    <a class='toggle' href="#">
+        <i class='icon-suitcase'></i>
+        <span class='label-active'>Everyting</span>
+    </a>
+    <ul>
+        <li class='active'>
+            <a data-label="Everyting" href="#"><i class='icon-suitcase'></i> Everyting</a>
+        </li>
+        <li>
+            <a data-label="Design" href="#"><i class='icon-magic'></i> Design</a>
+        </li>
+        <li >
+            <a data-label="UI-UX" href="#"><i class='icon-bolt'></i> UI-UX</a>
+        </li>
+        <li>
+            <a data-label="Print" href="#"><i class='icon-tint'></i> Print</a>
+        </li>
+        <li>
+            <a data-label="Photography" href="#"><i class='icon-camera-retro'></i> Phtography</a>
+        </li>
+
+    </ul>
+</div>
+</div>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+<script src="../resources/js/demo1.js"></script>
+
 </body>
 </html>
