--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="caption">
                     <h3>Thumbnail label</h3>
                     <p>...</p>
-                    <p><a href="html/demo1.html" id="demoBtn" class="btn btn-primary" role="button">Button</a> <a href="javascript:;" class="btn btn-default" role="button">Button</a></p>
+                    <p><a href="html/demo1.html" id="demoBtn" class="btn btn-primary" role="button">Button</a> <a href="html/demo2.html" class="btn btn-default" role="button">Button</a></p>
                 </div>
             </div>
         </div>
