--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="caption">
                     <h3>Thumbnail label</h3>
                     <p>...</p>
-                    <p><a href="javascript:;" class="btn btn-primary" role="button">Button</a> <a href="javascript:;" class="btn btn-default" role="button">Button</a></p>
+                    <p><a href="html/sample2.html" class="btn btn-primary" role="button">H5BP</a> <a href="javascript:;" class="btn btn-default" role="button">Button</a></p>
                 </div>
             </div>
         </div>
