--- a/index.html
+++ b/index.html
@@ -71,16 +71,13 @@
         </div>
     </div>
 
-</div>
-
-<div class="container">
-    <div class="row">
+    <div class="col">
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <div class="caption">
                     <h3>Thumbnail label</h3>
                     <p>...</p>
-                    <p><a href="html/demo1.html" id="demoBtn" class="btn btn-primary" role="button">Button</a> <a href="html/demo2.html" class="btn btn-default" role="button">Button</a></p>
+                    <p><a href="html/demo1.html" id="demoBtn" class="btn btn-primary" role="button">card-drop</a> <a href="html/demo2.html" class="btn btn-default" role="button">Input</a></p>
                 </div>
             </div>
         </div>
