--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
         </div>
         <div class="col-md-3">
             <div class="list-group">
-                <a href="#" class="list-group-item active">
-                    Cras justo odio
-                </a>
+                <a href="https://gradle.org/" class="list-group-item active">https://gradle.org/</a>
                 <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
                 <a href="#" class="list-group-item">Morbi leo risus</a>
                 <a href="#" class="list-group-item">Porta ac consectetur ac</a>
@@ -70,7 +68,9 @@
             </div>
         </div>
     </div>
+</div>
 
+<div class="container">
     <div class="col">
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
