--- a/html/demo1.html
+++ b/html/demo1.html
@@ -51,11 +51,8 @@
 </div>
 </div>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
+<script type="text/javascript" src="../resources/js/vendor/jquery-1.11.3.js"></script>
+<script type="text/javascript" src="../resources/lib/bootstrap-3.3.6/js/bootstrap.js"></script>
 <script src="../resources/js/demo1.js"></script>
 
 </body>
