--- a/html/sample.html
+++ b/html/sample.html
@@ -20,12 +20,7 @@
 <body>
 <h1>Hello, world!</h1>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-
-
-
+<script type="text/javascript" src="../resources/js/vendor/jquery-1.11.3.js"></script>
+<script type="text/javascript" src="../resources/lib/bootstrap-3.3.6/js/bootstrap.js"></script>
 </body>
 </html>
