--- a/html/sample2.html
+++ b/html/sample2.html
@@ -22,11 +22,9 @@
 <!-- Add your site or application content here -->
 <p>Hello world! This is HTML5 Boilerplate.</p>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="../resources/js/vendor/jquery-1.11.3.js"><\/script>')</script>
+<script type="text/javascript" src="../resources/js/vendor/jquery-1.11.3.js"></script>
+<script type="text/javascript" src="../resources/lib/bootstrap-3.3.6/js/bootstrap.js"></script>
 <script src="../resources/js/plugins.js"></script>
 <script src="../resources/js/main.js"></script>
-
-
 </body>
 </html>
