--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </nav>
 
 <div class="container" style="margin-top:70px;">
-    <div class="col">
+    <div class="row">
         <div class="col-md-9">
             <div class="jumbotron">
                 <h1>Hello, world!</h1>
@@ -70,7 +70,7 @@
 </div>
 
 <div class="container">
-    <div class="col">
+    <div class="row">
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <div class="caption">
