--- a/html/demo1.html
+++ b/html/demo1.html
@@ -53,7 +53,7 @@
 
 <script type="text/javascript" src="../resources/js/vendor/jquery-1.11.3.js"></script>
 <script type="text/javascript" src="../resources/lib/bootstrap-3.3.6/js/bootstrap.js"></script>
-<script src="../resources/js/demo1.js"></script>
+<script src="../resources/js/biz/demo1.js"></script>
 
 </body>
 </html>
