--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <div class="caption">
-                    <h3>Thumbnail label</h3>
+                    <h3>New Index</h3>
                     <p>...</p>
-                    <p><a href="javascript:;" class="btn btn-primary" role="button">Button</a> <a href="javascript:;" class="btn btn-default" role="button">Button</a></p>
+                    <p><a href="index2.html" class="btn btn-primary" role="button">Button</a> <a href="javascript:;" class="btn btn-default" role="button">Button</a></p>
                 </div>
             </div>
         </div>
@@ -103,7 +103,7 @@
 
 <script type="text/javascript" src="resources/js/vendor/jquery-1.11.3.js"></script>
 <script type="text/javascript" src="resources/lib/bootstrap-3.3.6/js/bootstrap.js"></script>
-<script type="text/javascript" src="resources/js/index.js"></script>
+<script type="text/javascript" src="resources/js/biz/index.js"></script>
 </body>
 </html>
 
