--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="caption">
                     <h3>New Index</h3>
                     <p>...</p>
-                    <p><a href="index2.html" class="btn btn-primary" role="button">Button</a> <a href="javascript:;" class="btn btn-default" role="button">Button</a></p>
+                    <p><a href="index2.html" class="btn btn-primary" role="button">Button</a> <a href="html/sample/fullPage.html" class="btn btn-default" role="button">Button</a></p>
                 </div>
             </div>
         </div>
