add angular js demo

--- a/index.html
+++ b/index.html
@@ -94,7 +94,24 @@
                 <div class="caption">
                     <h3>New Index</h3>
                     <p>...</p>
-                    <p><a href="index2.html" class="btn btn-primary" role="button">Button</a> <a href="html/sample/fullPage.html" class="btn btn-default" role="button">Button</a></p>
+                    <p><a href="index2.html" class="btn btn-primary" role="button">index2</a> <a href="html/sample/fullPage.html" class="btn btn-default" role="button">fullPage</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">AngularJS</h3>
+                </div>
+                <div class="panel-body">
+                    <div class="list-group">
+                        <a href="html/sample/angulardemo.html" class="list-group-item"></a>
+                    </div>
                 </div>
             </div>
         </div>
