add angular js demo

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="list-group">
-                        <a href="html/sample/angulardemo.html" class="list-group-item"></a>
+                        <a href="html/sample/angulardemo.html" class="list-group-item">AngularJS demo</a>
                     </div>
                 </div>
             </div>
