--- a/html/sample/angulardemo.html
+++ b/html/sample/angulardemo.html
@@ -54,9 +54,27 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container" ng-app="">
+    <div class="row">
+        <div class="col-md-6">
+            <form class="form-inline">
+                <div class="form-group">
+                    <label for="exampleInputName2">Name</label>
+                    <input type="text" class="form-control" id="exampleInputName2" ng-model="name" placeholder="">
+                    <span ng-bind="name"></span>
+                </div>
+            </form>
+        </div>
 
+        <div class="col-md-6">
+
+        </div>
+    </div>
 </div>
+
+<script type="text/javascript" src="../../resources/js/vendor/jquery-1.11.3.js"></script>
+<script type="text/javascript" src="../../resources/lib/bootstrap-3.3.6/js/bootstrap.js"></script>
+<script type="text/javascript" src="../../resources/js/vendor/angular.js"></script>
 
 </body>
 </html>
