--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="caption">
                     <h3>Thumbnail label</h3>
                     <p>...</p>
-                    <p><a href="html/demo1.html" id="demoBtn" class="btn btn-primary" role="button">card-drop</a> <a href="html/demo2.html" class="btn btn-default" role="button">Input</a></p>
+                    <p><a href="html/demo1.html" id="demoBtn" class="btn btn-primary" role="button">card-drop</a> <a href="html/demo2.html" class="btn btn-default" role="button">demo2</a></p>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
                 <div class="caption">
                     <h3>Thumbnail label</h3>
                     <p>...</p>
-                    <p><a href="html/sample2.html" class="btn btn-primary" role="button">H5BP</a> <a href="javascript:;" class="btn btn-default" role="button">Button</a></p>
+                    <p><a href="html/sample2.html" class="btn btn-primary" role="button">H5BP</a> <a href="html/sample/angular.html" class="btn btn-primary" role="button">AngularJS</a></p>
                 </div>
             </div>
         </div>
@@ -94,6 +94,7 @@
                 <div class="caption">
                     <h3>New Index</h3>
                     <p>...</p>
+                    <p><a href="index2.html" class="btn btn-primary" role="button">Button</a> <a href="html/sample/fullPage.html" class="btn btn-primary" role="button">fullPage</a></p>
                     <p><a href="index2.html" class="btn btn-primary" role="button">index2</a> <a href="html/sample/fullPage.html" class="btn btn-default" role="button">fullPage</a></p>
                 </div>
             </div>
