add angular demo

--- a/html/sample/angulardemo.html
+++ b/html/sample/angulardemo.html
@@ -54,13 +54,13 @@
     </div>
 </nav>
 
-<div class="container" ng-app="">
+<div class="container" style="margin-top:70px;" ng-app="">
     <div class="row">
         <div class="col-md-6">
             <form class="form-inline">
                 <div class="form-group">
                     <label for="exampleInputName2">Name</label>
-                    <input type="text" class="form-control" id="exampleInputName2" ng-model="name" placeholder="">
+                    <input type="text" class="form-control" id="exampleInputName2" ng-model="name" placeholder="xxx">
                     <span ng-bind="name"></span>
                 </div>
             </form>
