--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="caption">
                     <h3>Thumbnail label</h3>
                     <p>...</p>
-                    <p><a href="html/demo1.html" id="demoBtn" class="btn btn-primary" role="button">card-drop</a> <a href="html/demo2.html" class="btn btn-default" role="button">demo2</a></p>
+                    <p><a href="html/demo1.html" id="demoBtn" class="btn btn-primary" role="button">card-drop</a> <a href="html/demo2.html" class="btn btn-primary" role="button">demo2</a></p>
                 </div>
             </div>
         </div>
@@ -95,14 +95,11 @@
                     <h3>New Index</h3>
                     <p>...</p>
                     <p><a href="index2.html" class="btn btn-primary" role="button">Button</a> <a href="html/sample/fullPage.html" class="btn btn-primary" role="button">fullPage</a></p>
-                    <p><a href="index2.html" class="btn btn-primary" role="button">index2</a> <a href="html/sample/fullPage.html" class="btn btn-default" role="button">fullPage</a></p>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="container">
     <div class="row">
         <div class="col-md-3">
             <div class="panel panel-default">
