--- a/html/sample/angular.html
+++ b/html/sample/angular.html
@@ -45,13 +45,13 @@
     </div>
 </nav>
 
-<div class="container" role="main">
+<div class="container" role="main" ng-app="myApp">
     <div class="page-header">
         <h1>AngularJS demo</h1>
     </div>
 
     <div class="row">
-        <div class="col-md-6" ng-app="">
+        <div class="col-md-6" >
             <div class="panel panel-default">
                 <div class="panel-heading">Learning</div>
                 <div class="panel-body">
@@ -65,20 +65,67 @@
                 </div>
             </div>
         </div>
+
+    </div>
+
+    <div class="row">
         <div class="col-md-6">
-            <div class="panel panel-default">
+            <div class="panel panel-default" ng-controller="phoneListCtrl">
                 <div class="panel-heading">Learning</div>
                 <div class="panel-body">
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Name</th>
+                            <th>Snippet</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="phone in phones">
+                            <th>{{$index+1}}</th>
+                            <td>{{phone.name}}</td>
+                            <td>{{phone.snippet}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
 
+        <div class="col-md-6">
+            <div class="panel panel-default" ng-init="mobiles=[
+            {'name': 'Nexus','snippet': 'Fast just got faster with Nexus S.'},
+            {'name': 'Motorola','snippet': 'The Next, Next Generation tablet.'},
+            {'name': 'MOTOROLA','snippet': 'The Next, Next Generation tablet.'}
+            ]">
+                <div class="panel-heading">Learning</div>
+                <div class="panel-body">
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Name</th>
+                            <th>Snippet</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="mobile in mobiles">
+                            <th>{{$index+1}}</th>
+                            <td>{{mobile.name}}</td>
+                            <td>{{mobile.snippet}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 <script type="text/javascript" src="../../resources/js/vendor/jquery-1.11.3.js"></script>
 <script type="text/javascript" src="../../resources/lib/bootstrap-3.3.6/js/bootstrap.js"></script>
 <script type="text/javascript" src="../../resources/js/vendor/angular.js"></script>
+<script type="text/javascript" src="../../resources/js/biz/sample.js"></script>
 </body>
 </html>
 
