--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="list-group">
-                        <a href="html/sample/angulardemo.html" class="list-group-item">AngularJS demo</a>
+                        <a href="html/sample/angular.html" class="list-group-item">AngularJS demo</a>
                     </div>
                 </div>
             </div>
