add angular js demo

--- a/html/sample/angular.html
+++ b/html/sample/angular.html
@@ -59,7 +59,7 @@
                         <div class="form-group">
                             <label for="exampleInputName2">尝试输入</label>
                             <input type="text" class="form-control" id="exampleInputName2" ng-model="name" placeholder="">
-                            <p ng-bind="name"></p>
+                            <span ng-bind="name"></span>
                         </div>
                     </form>
                 </div>
